feat: Setup authentication project base with JWT login flow
- Added Lombok, Liquibase, PostgreSQL dependencies and configured application properties.
- Implemented Liquibase changelog to create initial 'users' table.
- Created SecurityConfig with custom SecurityFilterChain.
- Integrated JWT authentication flow (access token and refresh token generation).
- Implemented JwtUtil for token operations and JwtAuthenticationFilter for request validation.
- Developed AuthController with dummy login returning access and refresh tokens.
- Fixed Jackson serialization issues by ensuring DTO classes have appropriate constructors.
- Successfully tested login API using Postman with access and refresh token responses.

--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version> <!-- En güncel stabil sürüm -->
+			<version>1.18.30</version> <!-- veya en güncel stabil sürüm -->
 			<scope>provided</scope>
 		</dependency>
 		<!-- Runtime -->
