refactor(auth): improve forgot password flow with configurable reset token expiration and better error handling
- Made reset token expiration configurable via application.properties.
- Added UserNotFoundException and InvalidResetTokenException for specific error scenarios.
- Updated GlobalExceptionHandler to handle new exceptions with appropriate status codes.
- Enhanced reset-password endpoint to return success message after password reset.
- Added @Builder to DTO classes for cleaner object construction.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=123456
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 spring.jpa.hibernate.ddl-auto=none
+
+auth.reset-token-expiration-ms=900000 # 15 dakika = 15 * 60 * 1000
