fix(auth): invalidate forgot password code after successful verification
- After successfully verifying the forgot password code, the code is now set to null in the database.
- Prevents reuse of the same verification code for security purposes.
- Enhances the security of the forgot password flow by ensuring one-time use of reset codes.

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
       file: db/changelog/db.changelog-1.0-init.yaml
+
+  - include:
+      file: db/changelog/changes/2025-04-26-add-verification-code.yaml
+
+  - include:
+      file: db/changelog/changes/add-forgot-password-code.yaml
