feat(auth): implement soft delete for user accounts with 30 days recovery window

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,6 @@ databaseChangeLog:
 
   - include:
       file: db/changelog/changes/add-forgot-password-code.yaml
+
+  - include:
+      file: db/changelog/changes/2025-04-27-add-deletion-requested-at-column.yaml
