docs: add example application.properties file

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,14 +1,21 @@
-# Example SMTP Config
+### ?? Veritaban? Ayarlar?
+
+```properties
+#Veri Taban? Ayarlar?
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdb
+spring.datasource.username=postgres
+spring.datasource.password=yourpassword
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+spring.jpa.hibernate.ddl-auto=none
+
+# JWT Ayarlar?
+jwt.secret=your_jwt_secret_key
+
+# Mail Server Ayarlar?
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-application-password
+spring.mail.username=your_email@gmail.com
+spring.mail.password=your_email_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-
-# JWT Secret (env üzerinden set edilmesi önerilir)
-jwt.secret=your-jwt-secret
-
-# Reset token expiration time (ms)
-auth.reset-token-expiration-ms=900000
