feat(redis): migrate token blacklist system to Redis and update project documentation
- Added spring-data-redis dependency to the project (Maven).
- Configured Redis connection settings in application.properties (host and port).
- Implemented RedisService to handle token blacklisting operations (store with TTL, check existence).
- Updated logout process to store access tokens in Redis instead of database.
- Updated JwtAuthenticationFilter to validate tokens against Redis blacklist during authentication.
- Removed BlacklistedToken entity and BlacklistedTokenRepository as database blacklist storage is no longer needed.
- Added Liquibase changelog to drop the blacklisted_tokens table from the database.
- Updated README to include:
  - Redis installation and setup instructions.
  - Redis configuration examples for application.properties.
  - New explanation about Redis-based token blacklist system.
- Updated project features and technology stack in README to mention Redis integration.

--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -19,3 +19,9 @@ spring.mail.username=your_email@gmail.com
 spring.mail.password=your_email_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+### Redis Ayarlar?
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# E?er Redis ?ifreli ise ?u sat?r? da ekleyin:
+# spring.redis.password=your_redis_password
